Implement ::placeholder CSS selector.

This CL adds ::placeholder pseudo element selector which is independent from
::-webkit-input-placeholder.  This CL won't change any behavior of
::-webkit-input-placeholder, and an internal placeholder element matches to both of
selectors.

BUG=623345

Review-Url: https://codereview.chromium.org/2509593002
Cr-Commit-Position: refs/heads/master@{#433585}

Former-commit-id: 573cef7f96c99540bea732d3425f6fbc8938174f